--- a/proxy/public/index.html
+++ b/proxy/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Yalp</title>
+    <style>
+      body {
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
   </head>
   <body>
     <div id="Header"></div>
